--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: DBPL 2020
-description: The 18th International Symposium on Database Languages<br>September 4th in Tokyo, Japan<br>In conjunction with VLDB 2020
+description: The 18th International Symposium on Database Programming Languages<br>September 4th in Tokyo, Japan<br>In conjunction with VLDB 2020
 
 show_downloads: false
 google_analytics:
